kubernetes/apps/auth/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - auth.piny940.com
      secretName: cluster-tls
  rules:
    - host: auth.piny940.com
      http:
        paths:
          - path: /api/v1(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-frontend
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - auth.piny940.com
      secretName: cluster-tls
  rules:
    - host: auth.piny940.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-frontend
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-example
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - auth-example.piny940.com
      secretName: cluster-tls
  rules:
    - host: auth-example.piny940.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-example
                port:
                  number: 3000
